--- a/WasmDis.csproj
+++ b/WasmDis.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <PackageReference Include="Gee.External.Capstone" Version="2.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
